usr/src/cmd/mdb/common/modules/genunix/genunix.c
@@ -4293,8 +4293,9 @@ static const mdb_dcmd_t dcmds[] = {
 	{ "bufctl", ":[-vh] [-a addr] [-c caller] [-e earliest] [-l latest] "
 		"[-t thd]", "print or filter a bufctl", bufctl, bufctl_help },
 	{ "freedby", ":", "given a thread, print its freed buffers", freedby },
-	{ "kmalog", "?[ fail | slab ]",
-	    "display kmem transaction log and stack traces", kmalog },
+	{ "kmalog", "?[ fail | slab | zerosized ]",
+	    "display kmem transaction log and stack traces for specified type",
+	    kmalog },
 	{ "kmastat", "[-kmg]", "kernel memory allocator stats",
 	    kmastat },
 	{ "kmausers", "?[-ef] [cache ...]", "current medium and large users "
